[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pio-env-graph"
dynamic = ["version"]
description = "Visualize PlatformIO environment dependency graph"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["platformio", "graphviz", "dependency-graph", "embedded", "cli"]
authors = [
    { name = "Eugene Agafonov", email = "e.a.agafonov@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/eagafonov/pio-env-graph"
Repository = "https://github.com/eagafonov/pio-env-graph"
Issues = "https://github.com/eagafonov/pio-env-graph/issues"

[project.scripts]
pio-env-graph = "pio_env_graph.cli:main"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ["py310"]
